k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flomo-web

spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: my-flomo-web
