k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-flomo-web-ingress

spec:
  rules:
  - host: flomo.jerryshell.eu.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-flomo-web
            port:
              name: http
